--- a/src/lib/tpsa-ffi/Makefile
+++ b/src/lib/tpsa-ffi/Makefile
@@ -1,4 +1,2 @@
-## simple make file to for building the shared library object
-
-tpsaFFi : tpsa.c
-	gcc -std=c99 -O3 -Wall -fPIC -shared tpsa.c -o tpsa.so
+tpsaFFI: tpsa.c
+	gcc -std=c99 -Wall -W -pedantic -O3 -shared -fPIC tpsa.c -o libtpsa-ffi.so
