some cleaning and openmp added

--- a/src/lib/tpsa-ffi/Makefile
+++ b/src/lib/tpsa-ffi/Makefile
@@ -1,2 +1,2 @@
 tpsaFFI: tpsa.c
-	gcc -std=c99 -Wall -W -pedantic -O3 -shared -fPIC tpsa.c -o libtpsa-ffi.so
+	gcc -std=c99 -Wall -W -pedantic -O3 -shared $(OPENMP) -static-libgcc -fPIC tpsa.c -o libtpsa-ffi.so
