--- a/src/lib/tpsa-ffi/Makefile
+++ b/src/lib/tpsa-ffi/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 
 tpsaFFI: libtpsa-ffi-$(CC).so
 
-libtpsa-ffi-$(CC).so: tpsa.c mono.c mono.h
+libtpsa-ffi-$(CC).so: *.c *.h
 ifeq ($(CC),gcc)
 ifdef OPENMP
 	$(CC) -std=c99 -Wall -W -pedantic -O3 -shared -fopenmp -static-libgcc -fPIC *.c -o libtpsa-ffi-$(CC).so
