modified tpsa_der to use L matrix; updated Berz Makefile

--- a/src/lib/tpsa-berz/Makefile
+++ b/src/lib/tpsa-berz/Makefile
@@ -1,2 +1,2 @@
-tpsaBerz: TPSALib.f TPSALib_prm.f
+libtpsa-berz.so: TPSALib.f TPSALib_prm.f
 	gfortran -O3 -shared -fPIC TPSALib.f -o libtpsa-berz.so
