integrated MapClass interface

--- a/src/lib/tpsa-mc/Makefile
+++ b/src/lib/tpsa-mc/Makefile
@@ -1,2 +1,5 @@
-tpsaMC: tpsa.cpp tpsa.h
-	g++ -std=c++98 -Wall -W -pedantic -O3 -shared -fPIC tpsa.cpp -o libtpsa-mc.so
+libtpsa-mc.so: tpsa.cpp tpsa.h
+	g++ -std=c++0x -Wall -W -pedantic -O3 -shared -fPIC -fopenmp tpsa.cpp -o libtpsa-mc.so
+
+clean:
+	rm -f *.o *.so
