added track module and drift submodule

--- a/src/lib/tpsa-ffi/Makefile
+++ b/src/lib/tpsa-ffi/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-override CFLAGS += -std=c11 -W -Wall -Wextra -pedantic -O3
+override CFLAGS += -std=c11 -W -Wall -Wextra -pedantic -Os -ffast-math
 override CLIBS  += -lm -lgsl -lgslcblas
 
 .PHONY: tpsaFFI
@@ -30,10 +30,14 @@ bench_mul:	override CFLAGS += -fopenmp
 endif
 ifdef PROFILING
 bench_mul:	override CFLAGS += -fno-omit-frame-pointer -g
+track:	override CFLAGS += -pg
 endif
 
 bench_mul:	bench_mul.c mad_*.c tpsa_*.tc mad_*.h
 	$(CC) $(CFLAGS) bench_mul.c mad_*.c -o bench_mul $(CLIBS)
 
+track:  mad_*.c tpsa_*.tc mad_*.h
+	$(CC) $(CFLAGS) mad_*.c -o track $(CLIBS)
+
 clean:
-	rm -f libtpsa-ffi*.so bench_mul
+	rm -f libtpsa-ffi*.so bench_mul track
